<package>
  <name>comp_spatial</name>
  <version>1.0.0</version>
  <description>Routines for spatial reasoning in Prolog.

     Contains Prolog computables for calculating qualitative spatial relations.
     
  </description>
  <maintainer email="danielb@uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/comp_spatial</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Moritz Tenorth</author>
  <author>Lars Kunze</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosprolog</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_objects</build_depend>

  <run_depend>rosprolog</run_depend>
  <run_depend>knowrob_objects</run_depend>
  <run_depend>knowrob_common</run_depend>

  <export>
      <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
