<package>
  <name>comp_temporal</name>
  <version>1.0.0</version>
  <description>Temporal reasoning methods for the knowledge base.

     Time points and intervals are supported, and the system can
     calculate if one interval subsumes another one, happens before
     or after another, and how long it takes.</description>
   <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/comp_temporal</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>

  <run_depend>knowrob_common</run_depend>

  <export>
      <rosdoc config="rosdoc.yaml"/>
  </export>

</package>