<package>
  <name>ias_knowledge_base</name>
  <version>1.0.0</version>
  <description>The KnowRob ontology and some other required OWL files (e.g. owl.owl defining the OWL language, and rdf-schema.xml defining the RDFS concepts).</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>GPL</license>

  <url type="website">http://www.ros.org/wiki/ias_knowledge_base</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Moritz Tenorth</author>
  <author>Lars Kunze</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>thea</build_depend>
  <build_depend>semweb</build_depend>
  <build_depend>ias_prolog_addons</build_depend>
  <build_depend>knowrob_actions</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>thea</run_depend>
  <run_depend>semweb</run_depend>
  <run_depend>ias_prolog_addons</run_depend>
  <run_depend>knowrob_actions</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>thea</test_depend> -->
  <!-- <test_depend>semweb</test_depend> -->
  <!-- <test_depend>ias_prolog_addons</test_depend> -->
  <!-- <test_depend>knowrob_actions</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>