<?xml version="1.0"?>
<package>
  <name>json_prolog</name>
  <version>0.1.0</version>
  <description>The json_prolog package</description>

  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/json_prolog</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rosjava_build_tools</build_depend>

  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>json_prolog_msgs</build_depend>
  <build_depend>rosprolog</build_depend>

  <run_depend>rosprolog</run_depend>
</package>