<?xml version="1.0"?>
<package>
  <name>json_prolog</name>
  <version>0.1.0</version>
  <description>The json_prolog packages provides an interface to SWI Prolog
    through ROS services. It is implemented in Java by using rosjava and jpl7.JPL.
  </description>

  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/json_prolog</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Lorenz Moesenlechner</author>
  <author>Moritz Tenorth</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>json_prolog_msgs</build_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>libjson-glib</build_depend>

  <run_depend>rosprolog</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>json_prolog_msgs</run_depend>
  
</package>