<package>
  <name>json_prolog_msgs</name>
  <version>1.0.0</version>
  <description>Message definitions to talk to the JSON Prolog interface.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/json_prolog</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Georg Bartels</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>