<package>
  <name>knowrob</name>
  <version>1.0.0</version>
  <description>KnowRob is a knowledge processing framework for robots. It has originally
    been developed in the IAS group at Technische Universitaet Muenchen,
    Germany and is currently maintained by Moritz Tenorth at the Institute
    for Artificial Intelligence in Bremen, Germany.

    It provides tools for knowledge acquisition, representation and reasoning
    that are tailored to the demands in mobile robotics.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>GPL</license>
  <license>BSD</license>

  <url type="website">http://www.knowrob.org</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Moritz Tenorth</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>comp_temporal</run_depend>
  <run_depend>comp_orgprinciples</run_depend>
  <run_depend>comp_spatial</run_depend>
  <run_depend>knowrob_actions</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_objects</run_depend>
  <run_depend>knowrob_omics</run_depend>
  <run_depend>mod_srdl</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>json_prolog_msgs</run_depend>
  <run_depend>knowrob_cad_parser</run_depend>
  <run_depend>rosprolog</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
