<package>
  <name>knowrob</name>
  <version>1.0.0</version>
  <description>KnowRob is a knowledge processing framework for robots. It has originally
    been developed in the IAS group at Technische Universitaet Muenchen,
    Germany and is currently maintained by Moritz Tenorth at the Institute
    for Artificial Intelligence in Bremen, Germany.

    It provides tools for knowledge acquisition, representation and reasoning
    that are tailored to the demands in mobile robotics.
  </description>
  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://www.knowrob.org</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>swi-prolog</run_depend>
  <run_depend>swi-prolog-java</run_depend>
  <run_depend>libjson-java</run_depend>
  <run_depend>libjson-glib</run_depend>
  
  <run_depend>comp_orgprinciples</run_depend>
  <run_depend>comp_spatial</run_depend>
  <run_depend>comp_temporal</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>json_prolog_msgs</run_depend>
  <run_depend>knowrob_actions</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_maps</run_depend>
  <run_depend>knowrob_mongo</run_depend>
  <run_depend>knowrob_objects</run_depend>
  <run_depend>knowrob_srdl</run_depend>
  <run_depend>knowrob_vis</run_depend>
  <run_depend>rosprolog</run_depend>
  
  <export>
    <metapackage />
  </export>
</package>
