<package>
  <name>knowrob_actions</name>
  <version>1.0.0</version>
  <description>Reasoning about actions</description>
  <maintainer email="danielb@uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_actions</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Moritz Tenorth</author>
  <author>Daniel Beßler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_objects</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_objects</run_depend>
  <run_depend>message_generation</run_depend>

</package>
