<package>
  <name>knowrob_cad_parser</name>
  <version>1.0.0</version>
  <description>a package which contains Java code for parsing CAD Models (3D Models)</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/knowrob_cad_parser</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Stefan Profanter</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>knowrob_common</build_depend>
<!--   <build_depend>jpl</build_depend> -->
<!--   <build_depend>rosjava_jni</build_depend> -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>knowrob_common</run_depend>
<!--   <run_depend>jpl</run_depend> -->
<!--   <run_depend>rosjava_jni</run_depend> -->

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>knowrob_common</test_depend> -->
  <!-- <test_depend>jpl</test_depend> -->
  <!-- <test_depend>rosjava_jni</test_depend> -->

<export>
    <java classpath="${prefix}/bin:${prefix}/lib/vecmath.jar:${prefix}/lib/j3dcore.jar:${prefix}/lib/j3dutils.jar:${prefix}/lib/dae4j.jar:${prefix}/lib/processing/core.jar:${prefix}/lib/processing/PeasyCam.jar:${prefix}/lib/processing/log4j-1.2.16.jar"/>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>