<?xml version="1.0"?>
<package>
  <name>knowrob_common</name>
  <version>0.1.0</version>
  <description>The knowrob_common package</description>
  
  <author>Moritz Tenorth</author>
  <author>Daniel Beßler</author>

  <maintainer email="danielb@uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/knowrob_common</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>rosowl</build_depend>
  
  <run_depend>rosprolog</run_depend>
  <run_depend>rosowl</run_depend>
  <run_depend>ease_ontology</run_depend>

</package>
