<package>
  <name>ias_semantic_map</name>
  <version>1.0.0</version>
  <description>Semantic maps of different kitchens of the IAS group at TUM, created from 3D laser scans,
    represented as OWL file, plus additional predicates for manipulating the map and reasoning on it.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>GPL</license>

  <url type="website">http://www.ros.org/wiki/ias_semantic_map</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Lars Kunze</author>
  <author>Lorenz Moesenlechner</author>
  <author>Moritz Tenorth</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>comp_spatial</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>comp_spatial</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>comp_spatial</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>