<package>
  <name>knowrob_map_data</name>
  <version>1.0.0</version>
  <description>Semantic maps of different kitchens</description>
  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/knowrob_map_data</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Lars Kunze</author>
  <author>Lorenz Moesenlechner</author>
  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_map_tools</build_depend>

  <run_depend>knowrob_map_tools</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>